[package]
name = "haj"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
haj_macros = { path = "../haj_macros" }
half = "2.4.1"
lazy_static = "1.5.0"
num-traits = "0.2.19"
ocl = "0.19.7"

workspace.resolver = "2"
