[package]
name = "haj_macros"
version = "0.0.1"
edition = "2021"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
rs2c = { path = "../../rs2c", features = ["opencl"] }
ocl = { version = "0.19.7" }
# rs2c = { version = "0.0.1", features = ["opencl"] }

workspace.resolver = "2"

